--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-paginate": "^7.1.0",
     "react-scripts": "4.0.2",
     "react-tabs": "^3.2.0",
     "typescript": "^4.1.5",
